Updated Docker and Jenkins config

--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,6 +1,17 @@
 spring.application.name=apigateway
 server.port=5000
 
+# ==============================================
+# EUREKA CONFIGURATION
+# ==============================================
+#  Docker mode me ye chalega:
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 
+#  Local mode me jab Docker use nahi kar rahe ho, to is line ko uncomment karna:
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-
+# ==============================================
+# GATEWAY CONFIGURATION (optional if using Spring Cloud Gateway)
+# ==============================================
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
