--- a/payment_service/src/main/resources/application.properties
+++ b/payment_service/src/main/resources/application.properties
@@ -9,7 +9,11 @@ spring.datasource.password=
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 
+# ==============================================
+# EUREKA CONFIGURATION
+# ==============================================
+# ?? Docker mode me ye chalega:
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 
-#eureka----
-eureka.client.server-url.defaultZone=http://localhost:8761/eureka/
-
+# ? Local mode me jab Docker use nahi kar rahe ho, to is line ko uncomment karna:
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
