--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=product-service
 server.port=6000
-#spring.application.name=order_service
-#server.port=6001
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -9,8 +7,13 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
 
+# ==============================================
+# EUREKA CONFIGURATION
+# ==============================================
+# ?? Docker mode me ye chalega:
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 
-
-#eureka----
-eureka.client.server-url.defaultZone=http://localhost:8761/eureka/
+# ? Local mode me jab Docker use nahi kar rahe ho, to is line ko uncomment karna:
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
